# cal-tui

./: .gitignore  readme.md
client/: .env  Cargo.toml
client/src/: app.rs  auth.rs  backend.rs  main.rs  outlook.rs  ui.rs
