[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.0"
graph-oauth = "1.0.2"
tokio = { version = "1.25.0", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11.24", features = ["blocking"] }
chrono = "0.4.33"
serde = "1.0.196" 
toml = "0.8.10"
